# APPoP

./: CMakeLists.txt  HowToPrepStuff.txt  Makefile  armaPie.pbs  bakePie.sh  frame.cpp  frame.h  frame.pbs  frm_FXN.cpp  frm_MAS.cpp  frm_SIM.cpp  frm_WRK.cpp  lsAllProcLog.sh  makeFrame.sh  resultTimes.awk  start.in  tailAllProc.sh
armadillo-9.800.3/include/armadillo_bits/: config.hpp
runfiles/: cpFiles_eq.sh
tempfiles/: PrepObjF.sh  PrepSIM.sh  cpFiles_prod.sh  eor.begin  eqi.sh  prod.sh  props.in  stdin.temp
